# ShadowEngine

./: .gitattributes  .gitignore  .gitmodules  AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  CmakeLists.txt  CodeMap1.dgml  GenerateDocs.bat  GenerateProject.bat  IncludeFileDependencies1.dgml  README.md  ReSharper.DotSettings  ShadowEngine.sln.DotSettings  ShadowMap.cpp  ShadowMap.h  Test.txt  index.html  main.cpp  manifest.json  premake5.lua  xrefmap.yml
DemoGame/: TestProject.shadowproj  TestProject.shproj
Planning/: Assets.cpp  ClassBase.cpp  ClassBase.h  MapDraft.txt  SHObject.cpp  World1.txt  cpp.hint  mian.cpp
ShadowEngine/: CMakeLists.txt  D3D12SwapChain.cpp  D3D12SwapChain.h  SDLModule.cpp  SDLModule.h  ShadowActionManager.cpp  Test.txt  TestRenderer.cpp  TestRenderer.h  cpp.hint  docfx.json  index.html  log.txt  packages.config  premake5.lua  toc.html
ShadowEngineBuild/: BuildEnviroment.cs  Program.cs  ShadowEngineBuild.csproj  ShadowMapConverter.cs  docfx.json  log.txt  packages.config
ShadowEntity/: DefaultEntities.cpp  Entity.cpp  Entity.h  EntityRegistry.cpp  EntityRegistry.h
ShadowLight/: App.config  App.xaml  App.xaml.cs  ApplicationState.cs  Bootstrapper.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  ModelDiagram.cd  packages.config  premake5.lua
ShadowMap/: ShadowMap.h  ShadowMapRenderer.h  ShadowWorld.cpp  ShadowWorld.h
ShadowMath/: Vector2float.cpp  Vector2int.h
apidocs/: AssetManager.html  Callback.html  Camera.html  CameraInspector.html  DirectionalLight.html  DirectionalLightInspector.html  EntityContainer.MemoryChunk.html  EntityContainer.html  EntityContainer.iterator.html  FirstPersonCamera.html  FirstPersonCameraInspector.html  IEntityContainer.html  MeshRenderer.html  MeshRendererInspector.html  Player.html  PointLight.html  PointLightInspector.html  SFFElement.html  SFFVersion.html  ShadowEngine.Assets.AssetInfo.html  ShadowEngine.Assets.AssetLoader.html  ShadowEngine.Assets.AssetManager.html  ShadowEngine.Assets.Element.html  ShadowEngine.Assets.Material.html  ShadowEngine.Assets.MaterialImpl.html  ShadowEngine.Assets.Mesh.html  ShadowEngine.Assets.ShadowAsset.html  ShadowEngine.Assets.Texture.html  ShadowEngine.Assets.Texture2D.html  ShadowEngine.Assets.Texture2DImpl.html  ShadowEngine.Assets.TextureCubeMap.html  ShadowEngine.Assets.TextureCubeMapImpl.html  ShadowEngine.Assets.TextureImpl.html  ShadowEngine.Assets.TriangleIndices.html  ShadowEngine.Assets.asset_info_comparator.html  ShadowEngine.Assets.html  ShadowEngine.Debug.DebugModule.html  ShadowEngine.Debug.EntityInspector.html  ShadowEngine.Debug.Inspector.html  ShadowEngine.Debug.InspectorSystem.html  (+138 more)
dependencies/: dependencies.cmake  old cmake
docs/: AssetManager.html  Callback.html  Camera.html  CameraInspector.html  DirectionalLight.html  DirectionalLightInspector.html  EntityContainer.MemoryChunk.html  EntityContainer.html  EntityContainer.iterator.html  FirstPersonCamera.html  FirstPersonCameraInspector.html  IEntityContainer.html  MeshRenderer.html  MeshRendererInspector.html  Player.html  PointLight.html  PointLightInspector.html  ShadowEngine.Assets.AssetLoader.html  ShadowEngine.Assets.Element.html  ShadowEngine.Assets.Material.html  ShadowEngine.Assets.MaterialImpl.html  ShadowEngine.Assets.Mesh.html  ShadowEngine.Assets.ShadowAsset.html  ShadowEngine.Assets.Texture.html  ShadowEngine.Assets.Texture2D.html  ShadowEngine.Assets.Texture2DImpl.html  ShadowEngine.Assets.TextureCubeMap.html  ShadowEngine.Assets.TextureCubeMapImpl.html  ShadowEngine.Assets.TextureImpl.html  ShadowEngine.Assets.TriangleIndices.html  ShadowEngine.Assets.html  ShadowEngine.Debug.DebugModule.html  ShadowEngine.Debug.EntityInspector.html  ShadowEngine.Debug.Inspector.html  ShadowEngine.Debug.InspectorSystem.html  ShadowEngine.Debug.html  ShadowEngine.DebugGui.IShadowImGui.html  ShadowEngine.DebugGui.ImGuiModule.html  (+133 more)
docs-source/: build-docs.cmd  code2yaml.json  docfx.json  toc.yml
sledge/: premake5.lua
(+1188 files in other folders)
